Fix banner overflow

--- a/src/web/stylesheets/layout/_banner.css
+++ b/src/web/stylesheets/layout/_banner.css
@@ -15,6 +15,11 @@
     color: var(--banner-font-colour);
     background-color: var(--banner-bg-colour);
     margin: 0;
+    flex-wrap: nowrap;
+}
+
+#banner div {
+    flex-basis: auto;
 }
 
 #banner i {
